VSE, Python: bpy.ops.sequencer.image_strip_add() will truncate the directory name if the 'directory' variable does not end with a path separator #88908

Closed
opened 2021-06-07 06:23:10 +02:00 by hudson barkley · 4 comments

System Information
Operating system: Windows, Linux

Blender Version
Broken: 2.93
Worked: 2.92

Short description of error
bpy.ops.sequencer.image_strip_add() does not read the 'directory' variable correctly: it will truncate off the final subdirectory if the variable does not end in the path separator ('' or '/').
For instance, attempting to import 'test.jpg' in the 'C:\tmp' folder as:

bpy.ops.sequencer.image_strip_add(directory="C:\\tmp', files=[{'name': 'test.jpg'}]

will result in a strip with the source of 'C:\test.jpg', rather than 'C:\tmp\test.jpg' as it should be.
Note that in Blender 2.92, it would load the correct file in the correct path with the same code.

Exact steps for others to reproduce the error
Run the following code in blender (change the first two lines to point to an actual image file):

folder = 'C:\\tmp'
file = 'test.jpg'
import bpy
area = False
for screenarea in bpy.context.window.screen.areas:
    if screenarea.type == 'SEQUENCE_EDITOR':
        area = screenarea
if area:
    override = bpy.context.copy()
    override['area'] = area
    bpy.ops.sequencer.image_strip_add(override, directory=folder, files=[{'name':file}], frame_start=1, frame_end=100)

Lines 4-10 are required to just get the operator working and are not related to the bug.

**System Information** Operating system: Windows, Linux **Blender Version** Broken: 2.93 Worked: 2.92 **Short description of error** bpy.ops.sequencer.image_strip_add() does not read the 'directory' variable correctly: it will truncate off the final subdirectory if the variable does not end in the path separator ('\' or '/'). For instance, attempting to import 'test.jpg' in the 'C:\tmp' folder as: ``` bpy.ops.sequencer.image_strip_add(directory="C:\\tmp', files=[{'name': 'test.jpg'}] ``` will result in a strip with the source of 'C:\test.jpg', rather than 'C:\tmp\test.jpg' as it should be. Note that in Blender 2.92, it would load the correct file in the correct path with the same code. **Exact steps for others to reproduce the error** Run the following code in blender (change the first two lines to point to an actual image file): ``` folder = 'C:\\tmp' file = 'test.jpg' import bpy area = False for screenarea in bpy.context.window.screen.areas: if screenarea.type == 'SEQUENCE_EDITOR': area = screenarea if area: override = bpy.context.copy() override['area'] = area bpy.ops.sequencer.image_strip_add(override, directory=folder, files=[{'name':file}], frame_start=1, frame_end=100) ``` Lines 4-10 are required to just get the operator working and are not related to the bug.
Author

Added subscriber: @snuq

Added subscriber: @snuq

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 7cd91a06eb

This issue was referenced by 7cd91a06ebc15729867c9bb2b56fb36f21ecb5e1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-07-14 13:57:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88908
No description provided.